--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Write the HTML for your personal website.
         -->
         <img src="Jay.jpg" />
-        <h1>Hi, My name is Jay!</h1>
+        <h1>Hi, My name is Jeremiah!</h1>
         <h2>Fun facts about me:</h2>
         <ul>
             <li>53 years old</li>
