--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Hi, My name is Jeremiah!</h1>
         <h2>Fun facts about me:</h2>
         <ul>
-            <li>53 years old</li>
-            <li>lives in California</li>
-            <li>loves travelling</li>
+            <li>Loves playing Chess</li>
+            <li>Lives in England</li>
+            <li>Loves travelling</li>
         </ul>
         <p>Please connect with me on <a href="https://www.linkedin.com/in/jeremiah-abrams-a2475116/">LinkedIn here</a></p>
         <input type="text" placeholder="Enter email"/>
